--- a/home.css
+++ b/home.css
@@ -1,161 +1,382 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:wght@300;700&display=swap');
 
+/* NAVBAR CSS */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-
-body{
-    position:relative;
-    height: 100vh;
-    width: 100%;
-    overflow: hidden;
+.container{
+    display: grid;
+    grid-template-columns: auto auto;
 }
+
 .sidebar{
-    height: 100%;
+    background-color: #294A70;
+    height: 100vh;
+    width: 245px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position:sticky;
     top: 0;
     left: 0;
-    width:240px;
-    background-color:#294A70;
-    padding: 10px 25px;
-    transition: all 0.5s ease;
-}
 
-.sidebar .logo_content .logo{
-    color: #fff;
-    display:flex;
-    height: 50px;
-    width: 100%;
-    align-items: center;
-}
-
-.logo_content .logo i{
-    font-size: 20px;
-    font-weight: 400;
-}
-/*
-.sidebar #btn{
-position: absolute;
-color: #fff;
-left: 12%;
-top: 25px;
-font-size: 20px;
-
-}
-*/
-
-.sidebar ul{
-    margin-top: 20px;
-}
-
-.sidebar ul li{
-    position: relative;
-    height: 50px;
-    width: 100%;
-    margin: 0 5px;
-    list-style: none;
-}
-
-.sidebar ul li a{
-    color: #fff;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-}
-
-.sidebar ul li a:hover{
-    color: #11101d;
-    background: #fff;
-    border-radius: 10px;
-    transition: 0.3s;
-}
-
-.sidebar ul li a i{
-    height: 50px;
-    min-width: 50px;
-    border-radius: 12px;
-    line-height: 50px;
-    text-align: center;
 }
 
 .logo{
-    padding: 70px 0px 20px 0px;
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    padding: 20px;
+    align-items: center;
+    color: #fff;
+    padding-top: 50px;
+    font-size: 30px;
+    font-weight: bolder;
+}
+
+.nav_list li, a{
+    list-style-type: none;
+    text-decoration: none;
+    color: #fff;
+    padding: 20px;
+    font-size: 20px;
+    font-weight: bolder;
 }
 
 .logo_name{
-    padding: 0px 50px 0px 20px;
-    font-size: 20px;
-    font-weight: 900;
+    margin: 10px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 600;
 }
 
-.sidebar .profile_content{
-position:absolute;
-color:#fff;
-bottom:0;
-left:0;
-width:100%;
-}
-.sidebar .profile_content .profile{
-    position:relative;
-    padding: 10px 6px;
-    height: 60px;  
-    background: #699BF7;
+.links_name{
+    margin: 10px;
+    font-size: 18px;
 }
 
-.profile_content .profile .profile_details{
+.sidebar li:hover{
+    background-color: #1b334c;
+    border-radius: 20px;
+}
+
+/* HOMEPAGE CSS */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+
+*{
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.content_container{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+width: 100%;
+background-color: #D9D9D9;
+}
+
+
+/* Anchor */
+.anchor_container{
+    padding-right: 20%;
+    padding-top: 20px;
     display: flex;
-    align-items:center;
+    flex-direction: row;
+    background-color: #D9D9D9;
+    width: 100%;
+    justify-content: flex-end;
 }
 
-.profile .profile_details img{
-    height: 45px;
-    width: 45px;
-    object-fit:cover;
-    border-radius: 12px;
-}
-.profile .profile_details .name_job{
-   margin-left:10px; 
-   
-}
-.profile .profile_details .name{
-    font-size: 15px;
-    font-weight: 900;
- }
- .profile .profile_details .job{
-    font-size: 15px;
-
- }
- .profile #log_out{
-    position: absolute;
-    left: 14%;
-    bottom: 5px;
-    transform: translateX(-50%);
-    min-width: 50px;
-    line-height: 50px;
-    font-size: 20px;
-    border-radius: 12px;
- }
-
-
- @media only screen and (max-width: 600px) {
-    body {
-      background-color: lightblue;
-    }
-    .sidebar{
-
-        height: 100vh;
-        width:78px;
-        transition: all 0.5s ease;
-    }
+.anchor_container p{
+    color: #fff;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background-color: #294A70;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin: 0px 10px 0px 10px;
+    cursor: pointer;
     
-    .sidebar .links_name{
-        opacity: 0;
-        pointer-events: none;
-        transition: all 0.5s ease;
-    }
+}
 
+.anchor_container p:hover{
+    background-color: #3385ff;
+    border-color: #3385ff;
+    fill: #06f;
+}
+
+/* Image Header*/
+.image_header{
+    background-image: url("USLT2");
+    height: auto;
+}
+
+.image_header img{
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+}
+
+/* Reserve Button */
+.btn_container{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    height: 130.43px;
+    left: 50%;
+    top: 270px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+
+/* button trial */
+
+/* CSS */
+.button-58 {
+  align-items: center;
+  background-color: #294A70;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-family: Inter,sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  height: 80px;
+  justify-content: center;
+  line-height: 24px;
+  min-width: 140px;
+  outline: 0;
+  padding: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
+  text-align: center;
+  text-decoration: none;
+  transition: all .3s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+
+.button-58:hover {
+  background-color: #3385ff;
+  border-color: #3385ff;
+  fill: #06f;
+}
+
+
+@media (min-width: 768px) {
+  .button-58 {
+    min-width: 170px;
+  }
+}
+
+.schedule{
+    padding-top: 330px;
+}
+
+/* Table */
+
+.requests_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* table style */
+.styled-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    width: 1200px;
+}
+
+/* table header */
+.styled-table thead tr {
+    background-color: #484848;
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled-table th, .styled-table td {
+    padding: 12px 15px;
+}
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #dfdb0d;
+}
+
+/* Building Information */
+
+.bldg_container {
+    display: flex; 
+    background-color: #294A70;  
+    padding: 0px 200px 0px 200px;
+    color: #fff;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    box-shadow:5px 5px 5px 5px #969696;
+}
+
+.bldg3, .bldg2, .bldg1{
+    padding: 10px;
+}
+
+.bldg3 img{
+    width: 400px;
+}
+
+.button {
+    display: flex;
+    height: 50px;
+    padding: 0;
+    background: #FFFF;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    overflow: hidden;
+    font-family: "Quicksand", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+  }
+  
+  .button:hover {
+    background: #c0c0c0;
+  }
+  
+  
+  .button__text,
+  .button__icon {
+    display: inline-flex;
+    align-items: center;
+    padding: 0 24px;
+    color: black;
+    height: 100%;
+  }
+
+    .button{
+        margin: auto;
+    }
+  
+  .button__icon {
+    font-size: 1.5em;
+    background: rgba(0, 0, 0, 0.08);
+  }
+
+  /* Contact and FAQS */
+  
+  /* contact */
+  .faq_contact{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 200px 0px 200px;
+  }
+
+  .contact_container{
+    background-color:white;
+    width: 50%;
+    padding: 50px;
+    border-radius: 20px;
+  }
+  
+  .item_contact{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+  }
+
+  .button_contact{
+    display: flex;
+    height: 100px;
+    padding: 0;
+    background: ;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    overflow: hidden;
+    font-family: "Quicksand", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    align-items: center;
+    box-shadow: 5px 5px 5px #969696;
+  }
+
+  /* faqs */
+
+  .faq_container{
+
+    margin: 100px;
+  }
+
+  .faq_header{
+    background-color: #699BF7;
+    display: flex;
+    justify-content: center;
+    padding: 30px 10px 30px 10px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+  }
+  
+  .faq_header h2{
+    color: #fff;
+  }
+  
+  .faq_content{
+    background-color: #fff;
+    padding: 40px 120px 40px 120px ;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+
+  }
+
+  .btnfaqs{
+    display: flex;
+    background-color: #294A70;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin-top: 30px;
+    border-radius: 10px;
+    height: 70px;
+  }
+
+  .btnfaqs p{
+    color: white;
+  }
+  
+  .faq{
+    box-shadow: 5px 5px 5px #969696;
+  }
+
+  /* footer */
+  .footer{
+    background-color: #294A70;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
