--- a/home.css
+++ b/home.css
@@ -158,6 +158,7 @@ background-color: #D9D9D9;
   padding-left: 50px;
   padding-right: 50px;
   text-align: center;
+  border-radius: 100px;
   text-decoration: none;
   transition: all .3s;
   user-select: none;
@@ -167,8 +168,8 @@ background-color: #D9D9D9;
 
 
 .button-58:hover {
-  background-color: #3385ff;
-  border-color: #3385ff;
+  background-color: #E4A951;
+  border-color: #E4A951;
   fill: #06f;
 }
 
